<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/ecoProgress"
        style="@style/Widget.Material3.LinearProgressIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/ecoScoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eco_score_progress"
        app:layout_constraintTop_toBottomOf="@id/ecoProgress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/distanceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ecoScoreValue"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/distance_format" />

    <TextView
        android:id="@+id/speedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/distanceView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/speed_format" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startRide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_ride"
        app:layout_constraintTop_toBottomOf="@id/speedView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stopRide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_ride"
        app:layout_constraintTop_toBottomOf="@id/startRide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
